[package]
name = "fett-helmet-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
crossbeam-channel = "0.5.12"
indicatif = "0.17.8"
lazy_static = "1.4.0"
png = "0.17.13"
serialport = "4.3.0"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
